# Github-Activity-DevOps

./: .gitignore  CMakeLists.txt  CONVERSION-PROCESS.md  CONVERSION-SUMMARY.md  Jenkinsfile  README-WEB.md  README.md  ReadMe.md  docker-compose.yml  jenkinsfile  package-lock.json  package.json  server_cmd.sh
client/: Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js
client/src/: App.tsx  api.ts  types.ts
client/src/components/: ActivityItem.tsx  ActivityList.tsx  LoadingErrorStates.tsx  SearchBar.tsx  UserProfile.tsx
include/: Github_activity.h
server/: .env.example  Dockerfile  index.js  package-lock.json  package.json
src/: Github_activity.cpp  main.cpp
