cmake_minimum_required(VERSION 3.10)
project(Github-Activity)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED True)
find_package(CURL REQUIRED)
include_directories(include)
set(SOURCES src/main.cpp src/Github_activity.cpp)
add_executable(Github-Activity ${SOURCES})
target_link_libraries(Github-Activity ${CURL_LIBRARIES})